Replacing "new Boolean()" by "Boolean.valueOf()"